<resources>
    <string name="app_name">InventarioAJ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Juan Perez</string>
    <string name="nav_header_subtitle">juanitopere@test.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sales">Ventas</string>
    <string name="menu_articles">Articulos</string>
    <string name="menu_reports">Reportes</string>
    <string name="menu_logout">Cerrar Sesión</string>

    <string name="home_second">Home Second</string>

    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="login">Iniciar sesión</string>
    <string name="main_title">Accesorios AJ</string>
    <string name="inventory">Inventario</string>
    <string name="sales">Cargo: $0</string>
    <string name="price">Price</string>
    <string name="count">Count</string>
    <string name="textview">TextView</string>
    <string name="categoty">Categoty</string>
    <string name="name">Name</string>
    <string name="singup">Registrarse</string>
    <string name="title_activity_singup">Sing up</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cost">Costo</string>
    <string name="item_name">Nombre</string>
    <string name="category">Categoria</string>
    <string name="quantity_inventory">Cantidad</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar Articulos</string>
    <string name="category_name">Nombre de la Categoría</string>
    <string name="category_color">Color de la categoría</string>
    <string name="delete_category">Eliminar Categoría</string>
    <string name="agregar_categoria">Agregar Categoria</string>
    <string name="select_category">Seleccione la categoria</string>
    <string name="cancel">Cancelar</string>
    <string name="charge">Cobrar</string>

</resources>
