<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="@string/menu_sales" />
        <item
            android:id="@+id/nav_articles"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/menu_articles" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_receipt_black_24dp"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
