<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/menu_sales"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vicentesiis.inventarioaj.ui.sales.SalesFragment"
        android:label="@string/menu_sales"
        tools:layout="@layout/fragment_sales">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.vicentesiis.inventarioaj.ui.sales.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_articles"
        android:name="com.vicentesiis.inventarioaj.ui.articles.ArticlesFragment"
        android:label="@string/menu_articles"
        tools:layout="@layout/fragment_articles" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.vicentesiis.inventarioaj.ui.reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />

    <activity
        android:id="@+id/nav_logout"
        android:name="com.vicentesiis.inventarioaj.LoginActvity"
        android:label="activity_login"
        app:action="jeje"
        tools:layout="@layout/activity_login" />


</navigation>