<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="40pt"
        android:layout_height="40pt"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/item_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8pt"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="@+id/product_image"
        app:layout_constraintBottom_toBottomOf="@+id/product_image"
        android:orientation="vertical"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoty"
            android:textSize="8pt"/>

        <TextView
            android:id="@+id/item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="8pt"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_data_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8pt"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_image"
        app:layout_constraintBottom_toBottomOf="@+id/product_image"
        android:orientation="vertical"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/item_container"
            app:layout_constraintBottom_toBottomOf="@+id/item_container"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/price"
            android:textSize="8pt"
            android:layout_marginEnd="8pt"/>

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textSize="8pt"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>