<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCategoryActivity">

    <EditText
        android:id="@+id/item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/category_name"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_color"
        android:textSize="8pt"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/item_name"/>

    <Button
        android:id="@+id/white"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:enabled="true"
        android:onClick="chooseColor"
        android:background="@color/gray"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/red"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:enabled="true"
        android:background="@color/red"
        android:onClick="chooseColor"
        app:layout_constraintStart_toEndOf="@id/white"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/pink"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:enabled="true"
        android:background="@color/pink"
        android:onClick="chooseColor"
        app:layout_constraintStart_toEndOf="@id/red"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/orange"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:enabled="true"
        android:background="@color/orange"
        android:onClick="chooseColor"
        app:layout_constraintStart_toEndOf="@id/pink"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/yellow"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:enabled="true"
        android:background="@color/yellow"
        android:onClick="chooseColor"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/white" />

    <Button
        android:id="@+id/green"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:enabled="true"
        android:background="@color/green"
        android:onClick="chooseColor"
        app:layout_constraintStart_toEndOf="@id/yellow"
        app:layout_constraintTop_toBottomOf="@+id/white" />

    <Button
        android:id="@+id/blue"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:enabled="true"
        android:background="@color/blue"
        android:onClick="chooseColor"
        app:layout_constraintStart_toEndOf="@id/green"
        app:layout_constraintTop_toBottomOf="@+id/white" />

    <Button
        android:id="@+id/purple"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:enabled="true"
        android:background="@color/purpule"
        android:onClick="chooseColor"
        app:layout_constraintStart_toEndOf="@id/blue"
        app:layout_constraintTop_toBottomOf="@+id/white" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        android:enabled="true"
        android:onClick="save"
        android:text="@string/agregar_categoria"
        app:layout_constraintTop_toBottomOf="@+id/purple" />

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="84dp"
        android:enabled="true"
        android:onClick="delete"
        android:text="@string/delete_category"
        app:layout_constraintTop_toBottomOf="@+id/purple"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>